# Comperssion_VR

./: .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/benches/: compression_benchmarks.rs
backend/src/: lib.rs  main.rs
backend/src/algorithms/: huffman.rs  lz77.rs  lzma.rs  markov_chain.rs  mod.rs
backend/src/api/: handlers.rs  routes.rs
backend/src/encoding/: bitstream.rs
backend/src/metrics/: compression_stats.rs  mod.rs
backend/src/pipeline/: compression_pipeline.rs  mod.rs
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: algorithm-config.tsx  algorithm-docs.tsx  metrics-dashboard.tsx  playback-controls.tsx  stage-visualizer.tsx
frontend/src/components/ui/: button.tsx  card.tsx  progress.tsx  tabs.tsx
frontend/src/components/visualizers/: bitstream-visualizer.tsx  frequency-table-viewer.tsx  huffman-tree-builder.tsx  lz77-window-visualizer.tsx  markov-chain-graph.tsx
frontend/src/lib/: api.ts  file-parser.ts
frontend/src/types/: index.ts
