[package]
name = "compression-platform"
version = "0.1.0"
edition = "2021"
description = "Interactive compression algorithm research platform"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

# Async channels for streaming
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compression_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
